--- a/index.html
+++ b/index.html
@@ -2,6 +2,9 @@ hello world
 
 new feature is here
 here changes from local 
-my name is 
+
+new feature is here 
+add from remote changes 
+my name is Ara
 
 we are doing changes in main
