--- a/index.html
+++ b/index.html
@@ -5,4 +5,5 @@ i did changes remote from main
 i did second changes from main 
 doing some changes localy in feature-b 
 doing second change localy in feature-b 
-doing some changes localy in feature-b
+
+doing some changes localy in fe
