--- a/index.html
+++ b/index.html
@@ -3,4 +3,5 @@ i did changes remote from main
 
 i did second changes from main 
 doing some changes localy in feature-b 
+doing second change localy in feature-b 
 
