from main changes

--- a/index.html
+++ b/index.html
@@ -1,14 +1,1 @@
-hello world
-
-new feature is here
-here changes from local 
-
-new feature is here 
-add from remote changes 
-my name is Ara
-
-we are doing changes in main
-here is new changes from main 
-
-
-SECOND CHANGES 
+i did changes remote from main 
