--- a/index.html
+++ b/index.html
@@ -6,4 +6,6 @@ i did second changes from main
 doing some changes localy in feature-b 
 doing second change localy in feature-b 
 
+
 doing some changes localy in fe
+doing again changes 3 
