--- a/index.html
+++ b/index.html
@@ -1,2 +1,12 @@
+
+
 i did changes remote from main 
+
 i did second changes from main 
+doing some changes localy in feature-b 
+doing second change localy in feature-b 
+
+
+doing some changes localy in fe
+doing again changes 3 
+doing again changes 4 
